rust/surrealdb-orm-tests/src/snapshots/surrealdb_macros__query_transaction__tests__transaction_cancel-2.snap
---
source: surrealdb-macros/src/query_transaction.rs
expression: transaction
---
BEGIN TRANSACTION

SELECT * FROM $_param_00000000 WHERE city IS $_param_00000000 AND $_param_00000000 OR $_param_00000000 ORDER BY age NUMERIC ASC LIMIT 153 START AT 10 PARALLEL;

SELECT * FROM $_param_00000000 WHERE country IS $_param_00000000 ORDER BY age NUMERIC ASC LIMIT 20 START AT 5;

CANCEL TRANSACTION
	
